--- a/estilo.css
+++ b/estilo.css
@@ -1,77 +1,136 @@
-* body{
+* body {
     margin: 0px;
     padding: 0px;
 
 }
-#topo{
-    width: 960px; 
+
+#topo {
+    width: 960px;
     height: 100px;
     background-color: rgb(0, 140, 255);
     margin: auto;
 }
-#logo{
-    width: 260px; 
+
+#logo {
+    width: 260px;
     height: 200px;
-    
+
     float: left;
 }
-#logo img{
+
+#logo img {
     width: 230px;
     margin: 10px 10px 10px 10px;
 }
-#menu{
-    width: 700px; 
+
+#menu {
+    width: 700px;
     height: 200px;
     float: right;
     text-align: center;
     word-spacing: 20px;
     color: rgb(197, 17, 17);
+    margin-top: 50px;
 }
-#menu a{
+
+#menu a {
     text-decoration: none;
+    font-size: 25px;
 }
-#menu a:hover{
+
+#menu a:hover {
     color: aqua;
 }
-#banner{
-    width: 960px;
-    height: 500px;
-    background-color:slateblue ;
-    margin: auto;
-}
-#propaganda{
-    width: 960px; 
+
+#banner {
+    width: 100%;
     height: 300px;
-    background-color: rgb(211, 45, 128);
+
     margin: auto;
 }
-#container{
-    width: 960px;
-    height: 500px;
-    background-color:rgb(167, 89, 219) ;
-    margin: auto;
+
+#banner img {
+    width: 100%;
+    height: 300px;
+
 }
-#container2{
+
+#propaganda {
     width: 960px;
     height: 200px;
-     
+
     margin: auto;
 }
-#direita{
-    width: 480px;
+
+#propaganda img {
+    margin: 80px 80px 50px 40px;
+}
+
+#container {
+    width: 960px;
     height: 500px;
-    background-color:rgb(114, 23, 76) ;
+
+    margin: auto;
+}
+
+#container2 {
+    width: 960px;
+    height: 200px;
+
+    margin: auto;
+}
+
+#direita {
+    width: 450px;
+    height: 500px;
+
     float: right;
 }
-#esquerda{
-    width: 480px;
+
+#esquerda {
+    width: 450px;
     height: 500px;
-    background-color:rgb(75, 11, 48) ;
+
     float: left;
 }
-#rodape{
+
+#rodape {
     width: 960px;
     height: 100px;
-    background-color:rgb(23, 114, 94) ;
+    background-color: rgb(0, 0, 0);
     margin: auto;
+}
+
+.rodape_par {
+    text-align: center;
+    color: white;
+    padding-top: 20px;
+}
+
+.estilizacao {
+    text-align: justify;
+}
+
+.titulo {
+    text-align: left;
+    font-size: 50px;
+    color: darkgoldenrod;
+}
+
+.titulo2 {
+    text-align: center;
+    font-size: 30px;
+    margin: auto;
+    color: darkgoldenrod;
+}
+
+#conteudo {
+    width: 960px;
+    height: 400px;
+
+    margin: auto;
+}
+
+#corl {
+    color: black;
 }
