--- a/estilo.css
+++ b/estilo.css
@@ -126,11 +126,46 @@
 
 #conteudo {
     width: 960px;
-    height: 400px;
-
+    height: 600px;
     margin: auto;
+}
+#conteudo img{
+    width: 480px;
+    height: 300px;
+    margin:auto;
+    display: block;
 }
 
 #corl {
     color: black;
+}
+#fotos{
+    width: 960px;
+    height: 500px;
+    margin: auto;
+}
+.fotos_img{
+    margin: 10px 10px 50px 100px; 
+    
+
+}
+.anim_fotos:hover .fotos_img{
+    filter: blur(3px);
+    transform: scale(1.1);
+}
+input{
+    width: 100%;
+    padding: 10px 12px;
+    margin: 8px;
+}
+select{
+    width: 100%;
+    padding: 10px 12px;
+    margin: 8px;
+}
+textarea{
+    width: 100%;
+    height: 250px;
+    padding: 10px 12px;
+    margin: 8px;
 }
